src/test/ui/nll/issue-50716.stderr
error: unsatisfied lifetime constraints
  --> $DIR/issue-50716.rs:25:14
   |
LL |     let _x = *s; //~ ERROR
   |              ^^ assignment requires that `'a` must outlive `'static`

error: aborting due to previous error

